--- a/index.html
+++ b/index.html
@@ -110,13 +110,34 @@ function displayRandomImages()
 
   // display the new random image
   document.body.appendChild(newImage);
+
+  document.onkeydown = function(e) {
+      if(event.keyCode == 123) {
+        console.log('You cannot inspect Element');
+         return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        console.log('You cannot inspect Element');
+        return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+        console.log('You cannot inspect Element');
+        return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+        console.log('You cannot inspect Element');
+        return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        console.log('You cannot inspect Element');
+        return false;
+      }
+    } 
+    // prevents right clicking
+    document.addEventListener('contextmenu', e => e.preventDefault());
 }
 
-// function addClass() { 
-//     var v = document.document.getElementsByTagName('img'); 
-//     v.className += "addClass"; 
-// } 
-
+document.addEventListener('contextmenu', e => e.preventDefault());
 </script>  
 
 <body>  
